--- a/content/post/2024-09-11-week-two-ols/index.Rmd
+++ b/content/post/2024-09-11-week-two-ols/index.Rmd
@@ -19,7 +19,7 @@ The code used to produce these visualizations is publicly available in my [githu
 
 # Analysis 
 
-To begin to answer the first question of **whether it is possible to predict election outcomes using *only* the state of the economy** I will [Federal Reserve Economic Data](https://fred.stlouisfed.org/) from the St. Louis Fed with other economic data from the [Bureau of Economic Analysis](https://apps.bea.gov/iTable/?reqid=19&step=2&isuri=1&categories=survey#eyJhcHBpZCI6MTksInN0ZXBzIjpbMSwyLDMsM10sImRhdGEiOltbImNhdGVnb3JpZXMiLCJTdXJ2ZXkiXSxbIk5JUEFfVGFibGVfTGlzdCIsIjI2NCJdLFsiRmlyc3RfWWVhciIsIjE5NDciXSxbIkxhc3RfWWVhciIsIjIwMjQiXSxbIlNjYWxlIiwiMCJdLFsiU2VyaWVzIiwiUSJdXX0=). I will then perform various tests to explore the relationship between the state of the economy and the national popular vote share between 1948 and 2020.
+To begin to answer the first question of **whether it is possible to predict election outcomes using *only* the state of the economy** I will merge [Federal Reserve Economic Data](https://fred.stlouisfed.org/) from the St. Louis Fed with other economic data from the [Bureau of Economic Analysis](https://apps.bea.gov/iTable/?reqid=19&step=2&isuri=1&categories=survey#eyJhcHBpZCI6MTksInN0ZXBzIjpbMSwyLDMsM10sImRhdGEiOltbImNhdGVnb3JpZXMiLCJTdXJ2ZXkiXSxbIk5JUEFfVGFibGVfTGlzdCIsIjI2NCJdLFsiRmlyc3RfWWVhciIsIjE5NDciXSxbIkxhc3RfWWVhciIsIjIwMjQiXSxbIlNjYWxlIiwiMCJdLFsiU2VyaWVzIiwiUSJdXX0=). I will then perform various tests to explore the relationship between the state of the economy and the national popular vote share between 1948 and 2020.
 
 ```{r include = FALSE}
 # load packages
@@ -83,9 +83,9 @@ The first visualization that I will prepare is a scatterplot of the Q2 GDP growt
 
 I zeroed in on Q2 GDP growth in large part because of the findings of Professors Christopher H. Achen and Larry M. Bartels from Princeton and Vanderbilt respectively in their 2016 book ["Democracy for Realists: Why Elections Do Not Produce Responsive Government"](https://press.princeton.edu/books/hardcover/9780691169446/democracy-for-realists?srsltid=AfmBOorbMnYpN5HDv-R3lljwbHL-AeuvIkWja44IDFzswdHuuHMkUzuT). 
 
-Achen and Bartels make a strong case that voters are not fully retrospective in their decision-making; rather than equally weighting the performance of the incumbent president's party in the past four years, voters tend to base their ballot more explicitly off of what the voter has seen recently. The two authors demonstrate this by evidencing how the percent change in real disposable income between the most recent quarters leading up to the election (Q14 to Q15) accounts for a whopping 81% of the variance in the tenure-adjusted popular vote margin of the incumbent party for elections between 1952 and 2012. Longer-term RDI change between Q3 and Q15, however, accounts for only 54% of the variance.
+Achen and Bartels make a strong case that voters are not fully retrospective in their decision-making; rather than equally weighting the performance of the incumbent president's party in the past four years, voters tend to base their ballot more explicitly off of what the voter has seen recently. The two authors demonstrate this by evidencing how the percent change in real disposable income between the most recent quarters leading up to the election (Q14 to Q15 of the 4-year cycle) accounts for a whopping 81% of the variance in the tenure-adjusted popular vote margin of the incumbent party for elections between 1952 and 2012. Longer-term RDI change between Q3 and Q15, however, accounts for only 54% of the variance.
 
-Though I am not accounting for tenure advantage, and I am looking at two-party vote share rather than vote margin, I still expect Q2 GDP growth to be a useful predictor to investigate. 
+Though I am not accounting for tenure advantage, and I am looking at two-party vote share rather than vote margin, I still expect Q2 GDP growth in the presidential election year (Q14-Q15) to be a useful predictor to investigate. 
 
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 
@@ -111,7 +111,7 @@ d_inc_econ |>
 
 ```
 
-Noting how 2020 appears to be a significant outlier that could potentially be biasing the line of best fit, I performed this same analysis once more after having removed 2020. Since the primary objective of this blog is to predict the 2024 presidential election, I believe it is well-warranted to exclude economic data from Q2 of 2020, as this massive decline in GDP was attributable to the COVID-19 pandemic and less immediately to the governance of the Trump administration. Given how far outside of the pre-existing observation set 2020 was in terms of the magnitude of its economic decline, too, it is unlikely to be informative of the effect modest economic growth and decline has in more typical election years like the one we are currently experiencing in 2024.
+Noting how 2020 appears to be a significant outlier that could potentially be biasing the line of best fit, I will perform this same analysis once more after having removed 2020. Since the primary objective of this blog is to predict the 2024 presidential election, I believe it is well-warranted to exclude economic data from Q2 of 2020, as this massive decline in GDP was attributable to the COVID-19 pandemic and less immediately to the governance of the Trump administration. Given how far outside of the pre-existing observation set 2020 was in terms of the magnitude of its economic decline, too, it is unlikely to be informative of the effect modest economic growth and decline has in more typical election years like the one we are currently experiencing in 2024.
 
 ```{r include = FALSE, warning = FALSE}
 # Remove 2020 from plot.
@@ -179,7 +179,7 @@ This is preferable to simply preparing many models and then choosing the one tha
 
 ## Evaluation
 
-I will now prepare multiple predictive models using various combinations of national economic variables as predictors (1948-2016 election years). These models will be multiple linear regression OLS model, and I will evaluate them using cross-validation with 1000 simulations where 50% of the years are training data and 50% are test data.
+I will now prepare multiple predictive models using various combinations of national economic variables as predictors (1948-2016 election years). These models will be multiple linear regression OLS models, and I will evaluate them using cross-validation with 1000 simulations where 50% of the years are training data and 50% are test data.
 
 The three predictors I will consider are 
 
@@ -334,7 +334,7 @@ ggplot(pred_data, aes(x = Model, y = fit, fill = Model)) +
 
 ```
 
-All of these models, however, are pretty imprecise, offering large prediction intervals that are not very informative for the outcome of the 2024 election. For that reason, we can assume that the economic model of voting behavior, while helpful in identifying overall trends, requires additional information about polls and other political conditions to offer the sort of precision necessary to accurately forecast elections.
+All of these models, however, are pretty imprecise, offering large prediction intervals that are not very informative for the outcome of the 2024 election. Given how they all offer predictions around 50 percentage points, our 2024 predictions do not seem hugely sensitive to how measure the economy — they are all similarly imprecise. For that reason, we can assume that the economic model of voting behavior, while helpful in identifying overall trends, requires additional information about polls and other political conditions to offer the sort of precision necessary to accurately forecast elections.
 
 # Citations:
 
