--- a/content/post/2024-09-25-week-four-incumbency/index.Rmd
+++ b/content/post/2024-09-25-week-four-incumbency/index.Rmd
@@ -163,9 +163,9 @@ d_pork_state |>
        y = "Federal Grant Spending (Millions of $)", 
        title = "Federal Grant Spending (Millions $) by State Election Type") + 
   theme_minimal() + 
-  theme(plot.title = element_text(size = 20),
-        axis.title = element_text(size = 15),
-        axis.text = element_text(size = 12))
+  theme(plot.title = element_text(size = 12),
+        axis.title = element_text(size = 12),
+        axis.text = element_text(size = 10))
 
 ```
 
@@ -173,10 +173,20 @@ As is visible, swing states appear to have historically received more federal gr
 
 To further test this **pork** theory, I will run a regression at the county level. I am interested in determining whether there is a statistically significant relationship between incumbent vote swing and federal grant spending and if this relationship differs for districts in competitive and non-competitive states. A state will be considered competitive if the losing candidate averaged at least 45% in the last three presidential elections. 
 
-$$IncVoteSwing_t = \beta_0 + \beta_1(\Delta FedGrantSpend_t \text{ x }CompetitiveState_t) + \beta_2\Delta FedGrantSpend + \beta_3CompetitiveState_t +\beta_t \text{Year Fixed Effects} + \delta_t$$
+
+$$
+IncVoteSwing_t = \beta_0 + \beta_1(\Delta FedGrantSpend_t \text{ x }CompetitiveState_t) +
+$$
+$$
+\beta_2\Delta FedGrantSpend + \beta_3CompetitiveState_t + 
+$$
+
+$$
+ \beta_t + \text{(Year Fixed Effects)} + \delta_t$$
+
 I will also control for additional variables like Iraq war casualties, % change in county-level per capita income, and ad spending to mitigate omitted variable bias.
 
-```{r}
+```{r, echo = FALSE, warning = FALSE, message = FALSE}
 
 # Pork county model. 
 d_pork_county <- read_csv("fedgrants_bycounty_1988-2008.csv")
@@ -231,4 +241,4 @@ Kriner, Douglas L., and Andrew Reeves “Presidential Particularism and Divide-t
 
 # Data Sources: 
 
-Data are from the US presidential election popular vote results from 1948-2020, [Kriner and Reeves 2015](https://www-cambridge-org.ezp-prod1.hul.harvard.edu/core/journals/american-political-science-review/article/presidential-particularism-and-dividethedollar-politics/962ABE4FC41A6FF3E1F95CE1B54D1ADD), and [the Federal Reserve Bank of St. Louis](https://fred.stlouisfed.org/).
+Data are from the US presidential election popular vote results from 1948-2020 and [Kriner and Reeves 2015](https://www-cambridge-org.ezp-prod1.hul.harvard.edu/core/journals/american-political-science-review/article/presidential-particularism-and-dividethedollar-politics/962ABE4FC41A6FF3E1F95CE1B54D1ADD).
